tests/ui/compile-fail/pin_data/pin_data_is_not_unpin.rs
use pin_init::*;

#[pin_data]
struct Foo {
    a: u8,
    #[pin]
    _pin: core::marker::PhantomPinned,
}

fn assert_unpin<T: core::marker::Unpin>() {}

fn main() {
    assert_unpin::<Foo>()
}
